--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
  <body>
  <section class="fullPage">
     <nav class="header">
-      <a href="#top"><p class="name">Jeilymar Brady</p></a>
-      <ul class="headerItems">
+      <a href="#top" class="nameA"><p class="name" style="letter-spacing: 1px;">Jeilymar Brady</p></a>
+      <ul class="headerItems" style="letter-spacing: 1px;">
         <a href="#about"><li id="list">About</li></a>
         <a href="#resume"><li id="list">Resume</li></a>
         <a href="#portfolio"><li id="list">Portfolio</li></a>
-        <a href="#contactMe"><li id="list">Contact</li></a>
+        <a href="#contact"><li id="list">Contact</li></a>
       </ul>
     </nav>
     <section class="main" id="top">
@@ -26,9 +26,9 @@
     </section>
     <section class="aboutMe" id="about">
       <div class="aboutContainer">
-        <div class="aboutItem1"><p>THIS IS A PLACEHOLDER FOR TEXT<br>I am a Junior at Pacific Lutheran University studying Psychology and Computer Science<br>THIS IS A PLACEHOLDER FOR MORE TEXT</p></div>
+        <div class="aboutItem1"><h4 style="line-height: 6px;">A Snippet About Me:</h4><p style="color: #333333; font-size:18px;">I am a Junior at Pacific Lutheran University studying Psychology and Computer Science<br><br>I have been a problem solver ever since I can remember and combining that with helping others is the perfect solution to any problem</p></div>
         <div class="aboutItem2"><!-- <p>2I am a Junior at Pacific Lutheran University studying Psychology and Computer Science</p> --> <img class="logo" src="images/logo.png"></div>
-        <div class="aboutItem3"><p>THIS IS A PLACEHOLDER FOR MORE TEXT<br>I am a Junior at Pacific Lutheran University studying Psychology and Computer Science<br>THIS IS A PLACEHOLDER FOR MORE TEXT</p></div>
+        <div class="aboutItem3"><h4 style="color: #333333; line-height: 6px;">My Aspirations:</h4><p style="font-size:18px;">I plan to use my knowledge and opportunities to inspire myself and others to reach for their dreams!<br><br>THIS IS A PLACEHOLDER FOR MORE TEXT</p></div>
       </div>
     </section>
     <section class="resume" id="resume">
@@ -38,33 +38,136 @@
     </section>
     <!-- <section class="portfolio" id="portfolio"> -->
 
-    <section class="portfolioContainer">
+    <section class="portfolioContainer" id="portfolio">
       <button class="next"><img src="images/right.png"><!-- Arrow Right --></button>
       <button class="prev"><img src="images/left.png"><!-- Arrow Left --></button>
-        <div>
-          <p>First Slide</p>
-        </div>
-        <div>
-          <p>Bunch</p>
-        </div>
-        <div>
-          <p>DonutShop</p>
-        </div>
-        <div>
-          <p>Interaction between humor and ego-depletion</p>
-        </div>
-        <div>
-          <p>1/2</p>
-        </div>
-        <div>
-          <p>2/2</p>
-        </div>
-        <div>
-          <p>This Website</p>
-        </div>
-        <div>
-          <p>Extra Slide</p>
-        </div>
+      <div class="slides slideMain" id="slide0">
+        <section id="mainP">
+          <img class="slide1 slide1Main" src="images/slide1F.png">
+          <img class="slide2 slide2Main" src="images/slide2F.png">
+          <img class="slide3 slide3Main" src="images/slide3F.png">
+          <img class="slide4 slide4Main" src="images/slide4F.png">
+          <img class="slide5 slide5Main" src="images/slide5F.png">
+          <img class="slide6 slide6Main" src="images/slide6F.png">
+        </section>
+      </div>
+      <div class="slides slide1" id="slide1">
+        <section class="leftP">
+          <section class="sectionTop"><img class="imgTop" src="images/slide1B.png" onmouseover="this.src='images/slide1H.png'"
+onmouseout="this.src='images/slide1B.png'"></section>
+          <section class="sectionBtm"><img class="imgBtm" src="images/slide1F.png"></section>
+        </section>
+        <section class="rightP">
+          <section class="rightPTop">
+            <h3>Replenishing Mental Capacity:<br>Interaction of Ego-Depletion and Humor on Persistence
+            </h3><br><br>
+            <p><b>Task: </b><span style="color: white">This project was aimed to familiarize myself with 2-Way ANOVAS and data analysis through SPSS, as well as, data collection through 44 one-on-one quantitative research studies.</span></p><br><br>
+            <p><b>Roles: </b><span style="color: white">Set up original study by researching past studies on humor and on ego-depletion. Created a proposal for HPRB approval.</span></p><br><br>
+            <p><b>Final Product: </b><span style="color: white">The final research paper can be read HERE.</span></p>
+          </section>
+          <section class="rightPBtm">
+            <img id="slide0" class="mainMenu slide0Main backToMain" src="images/menu.png">
+          </section>
+        </section>
+      </div>
+      <div class="slides slide2" id="slide2">
+        <section class="leftP">
+          <section class="sectionTop"><img class="imgTop" src="images/slide2B.png" onmouseover="this.src='images/slide2H.png'"
+onmouseout="this.src='images/slide2B.png'"></section>
+          <section class="sectionBtm"><img class="imgBtm" src="images/slide2F.png"></section>
+        </section>
+        <section class="rightP">
+          <section class="rightPTop">
+            <h3>A Correlational Study Between<br>Happiness and Perceived Parental Support</h3><br><br>
+            <p><b>Task: </b><span style="color: white">This project was aimed to familiarize myself correlational data analysis and SPSS.</span></p><br><br>
+            <p><b>Roles: </b><span style="color: white">Set up original study by researching past studies on happiness and on parental support. Created a survey pertaining to perceived parental support.</span></p><br><br>
+            <p><b>Final Product: </b><span style="color: white">The final research paper can be read HERE.</span></p>
+          </section>
+          <section class="rightPBtm">
+            <img id="slide0" class="mainMenu slide0Main backToMain" src="images/menu.png">
+          </section>
+        </section>
+      </div>
+      <div class="slides slide3" id="slide3">
+        <section class="leftP">
+          <section class="sectionTop"><img class="imgTop" src="images/slide3B.png" onmouseover="this.src='images/slide3H.png'"
+onmouseout="this.src='images/slide3B.png'"></section>
+          <section class="sectionBtm"><img class="imgBtm" src="images/slide3F.png"></section>
+        </section>
+        <section class="rightP">
+          <section class="rightPTop">
+            <h3>Various Ways of Holding Backpacks<br>in a College Setting across Males and Females</h3><br><br>
+            <p><b>Task: </b><span style="color: white">This project was aimed to familiarize myself observational data analysis and SPSS.</span></p><br><br>
+            <p><b>Roles: </b><span style="color: white">Set up original study by researching past studies on gender differences and on holding behaviors and carrying style. Created an observation data collection sheet and observed 611 participants.</span></p><br><br>
+            <p><b>Final Product: </b><span style="color: white">The final research paper can be read HERE.</span></p>
+          </section>
+          <section class="rightPBtm">
+            <img id="slide0" class="mainMenu slide0Main backToMain" src="images/menu.png">
+          </section>
+        </section>
+      </div>
+      <div class="slides slide4" id="slide4">
+        <section class="leftP">
+          <section class="sectionTop"><img class="imgTop" src="images/slide4B.png" onmouseover="this.src='images/slide4H.png'"
+onmouseout="this.src='images/slide4B.png'"></section>
+          <section class="sectionBtm"><img class="imgBtm" src="images/slide4F.png"></section>
+        </section>
+        <section class="rightP">
+          <section class="rightPTop">
+            <h3>CodeFellows Assignment:<br>Brady Bunch Matching Game</h3><br><br>
+            <p><b>Task: </b><span style="color: white">This project was aimed to work with a team to build a web site that simulates a real-world product, service, or game.</span></p><br><br>
+            <p><b>Roles: </b><span style="color: white">I was in charged of writting the JavaScript for the matching game and login/sign-in functions.</span></p><br><br>
+            <p><b>Final Product: </b><span style="color: white">The final webpage can be seen HERE.</span></p>
+          </section>
+          <section class="rightPBtm">
+            <p class="para">View the code on GitHub
+              <a  class="a portfolioGit" href="https://github.com/JeilymarBrady/final_project/" title="Jeilymar Brady on GitHub" target="_blank"><img id="github" src="images/Lgithub.png"></img></a>
+            </p>
+            <img id="slide0" class="mainMenu slide0Main backToMain" src="images/menu.png">
+          </section>
+        </section>
+      </div>
+      <div class="slides slide5" id="slide5">
+        <section class="leftP">
+          <section class="sectionTop"><img class="imgTop" src="images/slide5B.png" onmouseover="this.src='images/slide5H.png'"
+onmouseout="this.src='images/slide5B.png'"></section>
+          <section class="sectionBtm"><img class="imgBtm" src="images/slide5F.png"></section>
+        </section>
+        <section class="rightP">
+          <section class="rightPTop">
+            <h3>CodeFellows Assignment:<br>DonutShop</h3><br><br>
+            <p><b>Task: </b><span style="color: white">This project was aimed to write a program that simulates donut demand based on calculating the number of donuts each location must prepare every day. Create a model of a donut shop.</span></p><br><br>
+            <p><b>Roles: </b><span style="color: white">I wrote all of the code for this project and took a different approach than others in terms of creating the table remotely through JS rather than in HTML and filling it as needed.</span></p><br><br>
+            <p><b>Final Product: </b><span style="color: white">The final webpage can be seen HERE.</span></p>
+          </section>
+          <section class="rightPBtm">
+            <p>View the code on GitHub
+              <a  class="a portfolioGit" href="https://github.com/JeilymarBrady/donut_shop" title="Jeilymar Brady on GitHub" target="_blank"><img id="github" src="images/Lgithub.png"></img></a>
+            </p>
+            <img id="slide0" class="mainMenu slide0Main backToMain" src="images/menu.png">
+          </section>
+        </section>
+      </div>
+      <div class="slides slide6" id="slide6">
+        <section class="leftP">
+          <section class="sectionTop"><img class="imgTop" src="images/slide6B.png"></section>
+          <section class="sectionBtm"><img class="imgBtm" src="images/slide6F.png"></section>
+        </section>
+        <section class="rightP">
+          <section class="rightPTop">
+            <h3>This Website</h3><br><br>
+            <p><b>Task: </b><span style="color: white">This project was aimed to familiarize myself more with HTML5/CSS3 and JavaSpript.</span></p><br><br>
+            <p><b>Roles: </b><span style="color: white">I started from scratch and wrote every line of code on this webpage in order to gain a better understanding and expand my knowledge in web design and development.</span></p><br><br>
+            <p><b>Final Product: </b><span style="color: white">Feel free to explore this site!</span></p>
+          </section>
+          <section class="rightPBtm">
+            <p>View the code on GitHub
+              <a  class="a portfolioGit" href="https://github.com/JeilymarBrady/jeilymarbrady.github.io" title="Jeilymar Brady on GitHub" target="_blank"><img id="github" src="images/Lgithub.png"></img></a>
+            </p>
+            <img id="slide0" class="mainMenu slide0Main backToMain" src="images/menu.png">
+          </section>
+        </section>
+      </div>
     </section>
     <section class="contact" id="contact">
       <!-- <div class="contact" id="contact"> -->
@@ -93,7 +196,7 @@
           </div>
         </form>
         <br>
-            <button class="btn-box btn-gradient btn-pos">Send</button>
+            <button class="btn">Send</button>
         </fieldset>
       </form>
     </div>
